<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_image_height"
            android:layout_marginBottom="@dimen/default_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/default_margin">

            <TextView
                style="@style/LineTitleStyle"
                android:layout_width="@dimen/details_desc_width"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/default_margin">

            <TextView
                style="@style/LineTitleStyle"
                android:layout_width="@dimen/details_desc_width"
                android:layout_height="wrap_content"
                android:text="@string/abv" />

            <TextView
                android:id="@+id/abvText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/default_margin">

            <TextView
                style="@style/LineTitleStyle"
                android:layout_width="@dimen/details_desc_width"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/default_margin">

            <TextView
                style="@style/LineTitleStyle"
                android:layout_width="@dimen/details_desc_width"
                android:layout_height="wrap_content"
                android:text="@string/hops" />

            <com.braula.abaxapp.view.ui.NonScrollListView
                android:id="@+id/hopsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:dividerHeight="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/default_margin">

            <TextView
                style="@style/LineTitleStyle"
                android:layout_width="@dimen/details_desc_width"
                android:layout_height="wrap_content"
                android:text="@string/malts" />

            <com.braula.abaxapp.view.ui.NonScrollListView
                android:id="@+id/maltsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:dividerHeight="0dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/default_margin">

            <TextView
                style="@style/LineTitleStyle"
                android:layout_width="@dimen/details_desc_width"
                android:layout_height="wrap_content"
                android:text="@string/method" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:layout_marginBottom="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/LineTitleStyle"
                android:layout_width="@dimen/details_method_width"
                android:layout_height="wrap_content"
                android:text="@string/mash_temp" />

            <com.braula.abaxapp.view.ui.NonScrollListView
                android:id="@+id/mashTempList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"
                android:dividerHeight="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:layout_marginBottom="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/LineTitleStyle"
                android:layout_width="@dimen/details_method_width"
                android:layout_height="wrap_content"
                android:text="@string/fermentation" />

            <TextView
                android:id="@+id/fermentationTempText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/twistWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:layout_marginBottom="@dimen/default_margin"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/LineTitleStyle"
                android:layout_width="@dimen/details_method_width"
                android:layout_height="wrap_content"
                android:text="@string/twist" />

            <TextView
                android:id="@+id/twistText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>